# USS-Nav

./: .gitignore  README.md  USS-Nav.html
MARSIM/Utils/mars_quadrotor_msgs/: CMakeLists.txt
MARSIM/Utils/odom_visualization/: CMakeLists.txt  package.xml
MARSIM/Utils/odom_visualization/src/: odom_visualization.cpp
MARSIM/Utils/pose_utils/: CMakeLists.txt
MARSIM/Utils/rviz_plugins/: CMakeLists.txt  COLCON_IGNORE  package.xml
MARSIM/Utils/uav_utils/: CMakeLists.txt
MARSIM/Utils/uav_utils/include/uav_utils/: utils.h
MARSIM/Utils/waypoint_generator/: CMakeLists.txt  COLCON_IGNORE  package.xml
MARSIM/cascadePID/: CMakeLists.txt  package.xml
MARSIM/cascadePID/include/: cascadePID.hpp
MARSIM/cascadePID/src/: cascadePID_node.cpp
MARSIM/local_sensing/: CMakeLists.txt
MARSIM/local_sensing/include/: opengl_sim.hpp
MARSIM/local_sensing/src/: opengl_render_node.cpp
MARSIM/map_generator/: CMakeLists.txt  package.xml
MARSIM/map_generator/src/: map_publisher.cpp
MARSIM/mars_drone_sim/: CMakeLists.txt  package.xml
MARSIM/mars_drone_sim/include/: dynamics.hpp
MARSIM/mars_drone_sim/src/: quadrotor_dynamics_node.cpp
MARSIM/scripts/: build_ros2_only.sh  publish_fake_odom.py
MARSIM/test_interface/: CMakeLists.txt
MARSIM/test_interface/config/: traj_simple.rviz
MARSIM/test_interface/launch/: single_drone.launch.py  single_drone_mid360.launch.py  single_drone_simple.launch.py
MARSIM/test_interface/src/: test_interface_node.cpp
docs/: repro_issues_and_solutions.md
uss_nav_ws/scripts/: check_marsim_topics.sh  evaluate_explore_metrics.py  export_bringup_map_and_trajectory.py  record_and_evaluate_explore.sh  run_marsim_validation.sh  start_vllm_qwen2vl.sh  stop_vllm_qwen2vl.sh  validate_marsim_results.py
uss_nav_ws/src/uss_nav_bringup/: package.xml  setup.cfg  setup.py
uss_nav_ws/src/uss_nav_bringup/config/: params.yaml  params_bringup_marsim.yaml  params_explore_a.yaml  params_explore_a_marsim.yaml
uss_nav_ws/src/uss_nav_bringup/launch/: bringup.launch.py  explore_a.launch.py
uss_nav_ws/src/uss_nav_bringup/resource/: uss_nav_bringup
uss_nav_ws/src/uss_nav_bringup/rviz/: explore_a.rviz  uss_nav.rviz
uss_nav_ws/src/uss_nav_bringup/uss_nav_bringup/: __init__.py
uss_nav_ws/src/uss_nav_interfaces/: CMakeLists.txt  package.xml
uss_nav_ws/src/uss_nav_interfaces/msg/: Frontier.msg  FrontierArray.msg  ObjectGraph.msg  ObjectNode.msg  RegionLabel.msg  RegionLabelArray.msg  RollingGrid3D.msg  SCGEdge.msg  SCGGraph.msg  SCGNode.msg
uss_nav_ws/src/uss_nav_stack/: package.xml  setup.cfg  setup.py
uss_nav_ws/src/uss_nav_stack/resource/: uss_nav_stack
uss_nav_ws/src/uss_nav_stack/uss_nav_stack/: __init__.py  common.py  exploration_monitor_node.py  frontier.py  frontier_node.py  gcm.py  gcm_node.py  object_fusion.py  object_graph_node.py  planner.py  planner_node.py  region.py  region_node.py  rolling_grid.py  rolling_grid_node.py  scg.py  scg_node.py  vlm_search_node.py
