<?xml version="1.0"?>
<package format="3">
  <name>uss_nav_bringup</name>
  <version>0.1.0</version>
  <description>Launch and configuration package for USS-Nav reproduction.</description>
  <maintainer email="a4201@example.com">a4201</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>uss_nav_stack</exec_depend>
  <exec_depend>uss_nav_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
