<?xml version="1.0"?>
<package format="3">
  <name>uss_nav_stack</name>
  <version>0.1.0</version>
  <description>Core USS-Nav reproduction nodes and algorithms.</description>
  <maintainer email="a4201@example.com">a4201</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_msgs_py</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>uss_nav_interfaces</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-networkx</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
